# spimTest

spimTest/: CMakeLists.txt
spimTest/src/: cpp.cpp  spimTest.c  spimTest2.c
